...
            app:layout_constraintStart_toEndOf="@+id/textViewSaturday"
            app:layout_constraintTop_toBottomOf="@id/barrier5"
            style="@style/front_list_item_days"/>


        <TextView
            android:id="@+id/switch_active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:contentDescription=""
            android:saveEnabled="false"
            android:soundEffectsEnabled="false"
...
            app:layout_constraintBottom_toTopOf="@id/guideline7"
            app:layout_constraintEnd_toStartOf="@id/guideline8"
            app:layout_constraintStart_toEndOf="@id/guideline14"
            app:layout_constraintTop_toBottomOf="@id/guideline6" />

        <TextView
            android:id="@+id/deleteItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:saveEnabled="false"
            android:background="@drawable/ic_baseline_delete_forever_64"
            android:visibility="gone"
...
